fix: contact link centered, navbar stretched, resume btn added to home.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,6 @@
 .navbar {
   background: #333333;
   color: #fffaf0;
-  border-radius: 12px;
 }
 .navbar-brand {
   color: #fffaf0 !important;
@@ -13,15 +12,4 @@
 }
 .navbar-collapse {
   flex-grow: 0 !important;
-}
-.navbar-collapse button {
-  font-family: "Poppins", sans-serif;
-  font-size: 1.2rem;
-  color: #daa520;
-  background: #333333;
-  border-color: #daa520;
-}
-.navbar-collapse button:hover {
-  color: #333333;
-  background: #daa520;
 }
