--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,17 @@
 .home h1 {
   font-family: "Anton", sans-serif;
 }
+.home button {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  color: #fffaf0;
+  background: #333333;
+}
+.home button:hover {
+  color: #333333;
+  background: #fffaf0;
+  border-color: #333333;
+}
 
 .home p,
 .about p,
@@ -121,6 +132,17 @@ li .active {
   color: #fffaf0;
   border-bottom-color: #fffaf0 !important;
 }
+
+.contact ul {
+  justify-content: center;
+}
+
+@media screen and (max-width: 565px) {
+  .contact ul {
+    justify-content: start;
+  }
+}
+
 li .contact-link {
   color: #daa520;
   text-decoration: underline;
